Incubation 03b, > Code cleanup 01.